--- a/arch/arm64/configs/RMX1801_defconfig
+++ b/arch/arm64/configs/RMX1801_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-lineageos"
+CONFIG_LOCALVERSION="-Kratos"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_USELIB is not set
 CONFIG_AUDIT=y
@@ -48,7 +48,10 @@ CONFIG_MODULE_FORCE_LOAD=y
 CONFIG_MODULE_UNLOAD=y
 CONFIG_MODULE_FORCE_UNLOAD=y
 CONFIG_MODVERSIONS=y
-CONFIG_PARTITION_ADVANCED=y
+CONFIG_PARTITION_ADVANCED=y=
+# CONFIG_IOSCHED_TEST is not set
+CONFIG_IOSCHED_BFQ=y
+CONFIG_DEFAULT_BFQ=y
 CONFIG_ARCH_QCOM=y
 CONFIG_ARCH_SDM660=y
 CONFIG_PCI=y
