--- a/arch/arm64/configs/RMX1801_defconfig
+++ b/arch/arm64/configs/RMX1801_defconfig
@@ -714,3 +714,30 @@ CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
 CONFIG_CRYPTO_CRC32_ARM64=y
 CONFIG_QMI_ENCDEC=y
 CONFIG_PRODUCT_REALME_RMX1801=y
+CONFIG_TCP_CONG_ADVANCED=y
+CONFIG_TCP_CONG_WESTWOOD=y
+# CONFIG_TCP_CONG_DCTCP is not set
+# CONFIG_TCP_CONG_HSTCP is not set
+# CONFIG_TCP_CONG_HYBLA is not set
+# CONFIG_TCP_CONG_VEGAS is not set
+# CONFIG_TCP_CONG_VENO is not set
+# CONFIG_TCP_CONG_SCALABLE is not set
+# CONFIG_TCP_CONG_LP is not set
+# CONFIG_TCP_CONG_YEAH is not set
+# CONFIG_TCP_CONG_ILLINOIS is not set
+# CONFIG_TCP_CONG_CDG is not set
+CONFIG_TCP_CONG_BBR=y
+CONFIG_TCP_CONG_BBR2=y
+CONFIG_DEFAULT_TCP_CONG="bbr2"
+CONFIG_NET_SCH_CAKE=y
+# CONFIG_DEFAULT_FQ_CODEL is not set
+CONFIG_DEFAULT_CAKE=y
+CONFIG_DEFAULT_NET_SCH="cake"
+CONFIG_POWERSUSPEND=y
+CONFIG_BOEFFLA_WL_BLOCKER=y
+CONFIG_FRAME_WARN=0
+CONFIG_DEVFREQ_BOOST=y
+CONFIG_DEVFREQ_INPUT_BOOST_DURATION_MS=64
+CONFIG_DEVFREQ_MSM_CPUBW_BOOST_FREQ=4173
+CONFIG_SOUND_CONTROL=y
+CONFIG_ARCH_HAS_FAST_MULTIPLIER=y
