--- a/arch/arm64/configs/RMX1801_defconfig
+++ b/arch/arm64/configs/RMX1801_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-Kratos"
+CONFIG_LOCALVERSION="-KRATOS-GAMING-V1"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_USELIB is not set
 CONFIG_AUDIT=y
